[tool.poetry]
name = "nonebot_plugin_leetcode2"
version = "1.0.5"
description = "基于nonebot2的leetcode查询插件。"
authors = ["Nranphy <3102002900@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Nranphy/nonebot_plugin_leetcode2"
repository = "https://github.com/Nranphy/nonebot_plugin_leetcode2"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.2"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-apscheduler = "^0.1.2"
httpx = "^0.20.0"
nonebot-plugin-htmlrender = "^0.0.4.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"